# rmp-proj

./: .dockerignore  Dockerfile  README.md  app.py  cloudbuild.yaml  employees.db  pyproject.toml  skaffold.yaml
deploy/: clouddeploy.yaml  cloudrun-production.yaml  cloudrun-staging.yaml
models/: models.py
static/: template.css
templates/: edit.html  index.html  template.html
tests/: test_employee_portal.py
